feat(web): add /sign-in
